# timeless-libsql

./: .gitignore  BUG_chunk_index_min_ts_shadowing.md  Cargo.toml  PLAN.md  README.md  RESULTS.md  TESTING.md
crates/timeless-codec/: Cargo.toml
crates/timeless-codec/src/: lib.rs
crates/timeless-core/: Cargo.toml
crates/timeless-core/src/: engine.rs  lib.rs
crates/timeless-core/src/blocks/: codec.rs  engine.rs  mem.rs  mod.rs  tests.rs
crates/timeless-core/src/spans/: codec.rs  engine.rs  mem.rs  mod.rs  tests.rs
crates/timeless-core/src/store/: fs.rs  mod.rs
crates/timeless-core/tests/: compression_honesty.rs  dup_min_ts.rs  prom_ingest.rs  roundtrip.rs  store_seam.rs  txn_journal.rs
crates/timeless-ext/: Cargo.toml
crates/timeless-ext/src/: flatjson.rs  lib.rs  logs_vtab.rs  metrics_vtab.rs  shadow_block_store.rs  shadow_span_store.rs  shadow_store.rs  shared.rs  spike.rs  traces_vtab.rs
tests/: cli.sh  crash.sh
tools/bench/: Cargo.toml
tools/bench/src/: bench_codec.rs  bench_logs.rs  bench_traces.rs  datasets.rs  main.rs  oracle.rs
tools/libsql-check/: Cargo.toml
tools/libsql-check/src/: main.rs
