[package]
name = "timeless-ext"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib = "C dynamic library": a plain .so with a C ABI, which is what
# sqlite3's `.load` / load_extension() dlopen()s. No Rust runtime assumed.
crate-type = ["cdylib"]

[dependencies]
rusqlite = { version = "0.40.1", features = ["vtab", "loadable_extension"] }
timeless-core = { path = "../timeless-core" }
